; ModuleID = '/home/carl/AnghaBench/timescaledb/src/telemetry/extr_telemetry.c_add_license_info.c'
source_filename = "/home/carl/AnghaBench/timescaledb/src/telemetry/extr_telemetry.c_add_license_info.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 (i32*)* }

@WJB_BEGIN_OBJECT = common dso_local global i32 0, align 4
@REQ_LICENSE_EDITION = common dso_local global i32 0, align 4
@REQ_LICENSE_EDITION_APACHE = common dso_local global i32 0, align 4
@ts_cm_functions = common dso_local global %struct.TYPE_2__* null, align 8
@WJB_END_OBJECT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*)* @add_license_info to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @add_license_info(i32* %0) #0 {
  %2 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %3 = load i32, i32* @WJB_BEGIN_OBJECT, align 4
  %4 = call i32 @pushJsonbValue(i32** %2, i32 %3, i32* null)
  %5 = call i64 (...) @TS_CURRENT_LICENSE_IS_APACHE_ONLY()
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %12

7:                                                ; preds = %1
  %8 = load i32*, i32** %2, align 8
  %9 = load i32, i32* @REQ_LICENSE_EDITION, align 4
  %10 = load i32, i32* @REQ_LICENSE_EDITION_APACHE, align 4
  %11 = call i32 @ts_jsonb_add_str(i32* %8, i32 %9, i32 %10)
  br label %18

12:                                               ; preds = %1
  %13 = load %struct.TYPE_2__*, %struct.TYPE_2__** @ts_cm_functions, align 8
  %14 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %13, i32 0, i32 0
  %15 = load i32 (i32*)*, i32 (i32*)** %14, align 8
  %16 = load i32*, i32** %2, align 8
  %17 = call i32 %15(i32* %16)
  br label %18

18:                                               ; preds = %12, %7
  %19 = load i32, i32* @WJB_END_OBJECT, align 4
  %20 = call i32 @pushJsonbValue(i32** %2, i32 %19, i32* null)
  ret void
}

declare dso_local i32 @pushJsonbValue(i32**, i32, i32*) #1

declare dso_local i64 @TS_CURRENT_LICENSE_IS_APACHE_ONLY(...) #1

declare dso_local i32 @ts_jsonb_add_str(i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
